# koda

./: .gitignore  README.md  command-palette.html  doc-command.md  package.json  vite.config.ts
src/: App.tsx  command-palette-main.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: koda_web.html
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  server.rs
src/components/: AddTaskModal.tsx  BlockedReasonModal.tsx  CommandPalette.tsx  CommandPaletteStandalone.css  CommandPaletteStandalone.tsx  DevBanner.tsx  EditTaskModal.tsx  KanbanBoard.tsx  KioskMode.tsx  Sidebar.tsx  TaskCard.tsx  TimerBadge.tsx  TimerModal.tsx
src/components/settings/: ApiSupportToggle.tsx  CustomActionsToggle.tsx  GlobalShortcutToggle.tsx
src/components/sidebar/: AboutModal.tsx  DataPanel.tsx  ReportButton.tsx  SettingsPanel.tsx  StatRow.tsx  StatsPanel.tsx  WebServerPanel.tsx
src/components/subtasks/: AllDoneModal.tsx  SubTaskEditor.tsx  SubTaskItem.tsx  SubTaskList.tsx
src/hooks/: useTimer.ts  useWeather.ts  useWebServer.ts
src/store/: appStore.ts
src/types/: koda.ts
src/utils/: reportGenerator.ts
